fixed Liliia's remarks